# cmake-101

./: .gitignore  README.md
example/: CMakeLists.txt  main.cpp  strings.hpp
example/src/: main.cpp  strings.cpp
slides/: extra.css  slides.html  slides.org
